2.0.0a17
 - implement data matrix states
2.0.0a16
 - add documentation (from Shape-Out 1)
 - test deployment for macOS
2.0.0a1
 - first preview