@@ -8,7 +8,7 @@ from .. import meta_tool
 class MatrixDataset(QtWidgets.QWidget):
     _instance_counter = 0
     active_toggled = QtCore.pyqtSignal()
-    enabled_toggled = QtCore.pyqtSignal()
+    enabled_toggled = QtCore.pyqtSignal(bool)
     option_action = QtCore.pyqtSignal(str)
 
     def __init__(self, path=None):
@@ -45,12 +45,14 @@ class MatrixDataset(QtWidgets.QWidget):
     def __getstate__(self):
         state = {"path": self.path,
                  "identifier": self.identifier,
+                 "enabled": self.checkBox.isChecked(),
                  }
         return state
 
     def __setstate__(self, state):
         self.identifier = state["identifier"]
         self.path = state["path"]
+        self.checkBox.setChecked(state["enabled"])
         self.update_content()
 
     def action_duplicate(self):
